--- a/ARKitHorizontalPlaneDemo/Base.lproj/Main.storyboard
+++ b/ARKitHorizontalPlaneDemo/Base.lproj/Main.storyboard
@@ -28,6 +28,13 @@
                                     <action selector="resetTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="45O-Qq-K4I"/>
                                 </connections>
                             </button>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-4" maxValue="4" translatesAutoresizingMaskIntoConstraints="NO" id="3Ik-MB-LaF">
+                                <rect key="frame" x="14" y="617" width="344" height="30"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <action selector="rotate3DObject:" destination="BYZ-38-t0r" eventType="valueChanged" id="2rf-Ww-sn4"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -40,6 +47,7 @@
                     </view>
                     <connections>
                         <outlet property="resetButton" destination="izN-Ax-RD8" id="67T-sl-kLv"/>
+                        <outlet property="rotationSlider" destination="3Ik-MB-LaF" id="7Uq-mJ-MVw"/>
                         <outlet property="sceneView" destination="jI8-gS-dO0" id="oTc-r2-wcA"/>
                     </connections>
                 </viewController>
